<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <com.sasuke.recommender.customfonts.EditText_Roboto_Regular
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/edittext_modified_states"
        android:hint="@string/demo_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingBottom="15dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:singleLine="true" />

    <com.sasuke.recommender.customfonts.EditText_Roboto_Regular
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_email"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edittext_modified_states"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingBottom="15dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:paddingTop="15dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_password"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:background="@color/colorPrimary"
        android:paddingBottom="15dp"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:paddingTop="15dp"
        android:text="@string/login"
        android:textColor="@color/white" />
</RelativeLayout>